syntax="proto3";

package auth;
option go_package = "proto/auth_proto";

import "google/protobuf/empty.proto";


service AuthService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse) {}
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}
  rpc RevokeToken(RevokeTokenRequest) returns (google.protobuf.Empty) {}
  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty) {}
}

// Create user
message CreateUserRequest {
  string login = 1;
  string password = 2;
  string first_name = 3;
  string second_name = 4;
  string third_name = 5;
}
message CreateUserResponse {
  int64 user_id = 1;
  string access_token = 2;
  string refresh_token = 3;
}

// Get user
message GetUserRequest {
  int64 user_id = 1;
}
message GetUserResponse {
  int64 user_id = 1;
  string login = 2;
  string first_name = 3;
  string second_name = 4;
  string third_name = 5;
  string created_at = 6;
}

// Refresh token
message RefreshTokenRequest {
  string refresh_token = 1;
}
message RefreshTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
}

// Update user
message UpdateUserRequest {
  int64 user_id = 1;
  string login = 2;
  string first_name = 3;
  string second_name = 4;
  string third_name = 5;
}
message UpdateUserResponse {
  int64 user_id = 1;
  string login = 2;
  string first_name = 3;
  string second_name = 4;
  string third_name = 5;
  string created_at = 6;
}

// Revoke token
message RevokeTokenRequest {
  string refresh_token = 1;
}

// Delete user
message DeleteUserRequest {
  string user_id = 1;
}