syntax="proto3";

package auth;
option go_package = "proto/auth_proto";

import "google/protobuf/empty.proto";

service AuthService {
  rpc Health(HealthRequest) returns (HealthResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc ChangePassword(ChangePasswordRequest) returns (google.protobuf.Empty);
  rpc UpdateUserBio(UpdateUserBioRequest) returns (google.protobuf.Empty);
  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty);
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
  rpc GetAllActiveTokens(GetAllActiveTokensRequest) returns (GetAllActiveTokensResponse);
  rpc RevokeToken(RevokeTokenRequest) returns (google.protobuf.Empty);
  rpc RevokeAllTokens(RevokeAllTokensRequest) returns (google.protobuf.Empty);
}

// Health
message HealthRequest {
  string operation_id = 1;
}
message HealthResponse {
  string health = 1;
}

// Register user
message RegisterRequest {
  string operation_id = 1;
  string email = 2;
  string password = 3;
  string first_name = 4;
  string last_name = 5;
  string patronymic = 6;
}
message RegisterResponse {
  string user_uuid = 1;
}

// Login
message LoginRequest {
  string operation_id = 1;
  string email = 2;
  string password = 3;
}
message LoginResponse {
  string user_uuid = 1;
  string access_token = 2;
  string refresh_token = 3;
}

// Get user
message GetUserRequest {
  string operation_id = 1;
  string user_uuid = 2;
}
message GetUserResponse {
  string user_uuid = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
  string patronymic = 5;
  string created_at = 6;
}

// Change user password
message ChangePasswordRequest {
  string operation_id = 1;
  string user_uuid = 2;
  string password = 3;
}
// Empty response

// Update user bio
message UpdateUserBioRequest {
  string operation_id = 1;
  string user_uuid = 2;
  string first_name = 3;
  string last_name = 4;
  string patronymic = 5;
}
// Empty response

// Delete user
message DeleteUserRequest {
  string operation_id = 1;
  string initiator_user_uuid = 2;
  string target_user_uuid = 3;
}
// Empty response

// Refresh token
message RefreshTokenRequest {
  string operation_id = 1;
  string refresh_token = 2;
}
message RefreshTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
}

// Get all user active refresh tokens
message GetAllActiveTokensRequest {
  string operation_id = 1;
  string user_uuid = 2;
}
message GetAllActiveTokensResponse{
  repeated Token tokens = 1;
}
message Token {
  string token = 1;
}

// Revoke token
message RevokeTokenRequest {
  string operation_id = 1;
  string refresh_token = 2;
}
// Empty response

// Revoke all user tokens
message RevokeAllTokensRequest {
  string operation_id = 1;
  string user_uuid = 2;
}
// Empty response
